--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "google-auth-library": "^6.0.5",
-    "googleapis": "^55.0.0",
     "http-errors": "~1.6.3",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.24",
     "mongoose-paginate-v2": "^1.3.9",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "pug": "^3.0.0"
   }
 }
